- This is related to choice ticket #23 where the delete button is being cutoff - Add important tag to the css to make sure the new height is not being ignored.

--- a/icekit/dashboard/static/admin/css/icekit_dashboard.less
+++ b/icekit/dashboard/static/admin/css/icekit_dashboard.less
@@ -357,7 +357,7 @@
 .submit-row a.deletelink,
 .delete-confirmation form .cancel-link {
 	color: #fff;
-	height: 35px;
+	height: 35px !important;
 }
 
 // OVERRIDING DJANGO ADMIN CHANGE FORM APPEARANCE
